<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#95DAD5BE"
    tools:context=".PresentationLayer.MusicPlayer.MusicPlayerActivity">

    <ImageView
        android:id="@+id/exit_button"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/back_arrow" />

    <ImageView
        android:id="@+id/music_player_image"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/song_image_field"
        android:fadingEdge="horizontal|vertical|none"
        android:padding="20dp"
        android:elevation="40dp"/>

    <TextView
        android:id="@+id/song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="730dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:ellipsize="marquee"
        android:fontFamily="sans-serif"
        android:padding="20dp"
        android:singleLine="true"
        android:text="Title of the song"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/controls"
        android:padding="100dp">

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="250dp"
            android:backgroundTint="@color/black" />

        <TextView
            android:id="@+id/current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="60dp"
            android:textSize="20dp"
            android:text="0:00"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_time"
            android:textSize="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="60dp"
            android:text="0:00"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
          />

        <SeekBar
            android:id="@+id/seek_bar_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignBottom="@+id/relativeLayout"
            android:layout_marginStart="200dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="1dp"
            android:backgroundTint="@color/black" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop = "20dp"
            android:padding="100dp">

            <ImageView
                android:id="@+id/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/previous_song_icon" />

            <ImageView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/next_song_icon" />

            <ImageView
                android:id="@+id/pause_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/pause_icon" />


        </RelativeLayout>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="library_menu"
        android:src="@android:drawable/ic_menu_more"
        android:alpha="10"
        />

</RelativeLayout>
